--- a/index.html
+++ b/index.html
@@ -13,23 +13,31 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <style type="text/tailwindcss"></style>
   </head>
-  <body>
+  <body class="container">
     <header>
-      <div upheader>
+      <div class="">
         <div left>
-          <img src="#" alt="logo" />
+          <img src="img/logo.svg" alt="logo" />
           <ul>
             <li></li>
-            <a whatsapp href="#"><img src="#" alt="#" /></a>
-            <a facebook href="#"><img src="#" alt="#" /></a>
-            <a instagram href="#"><img src="#" alt="#" /></a>
-            <a telegram href="#"><img src="#" alt="#" /></a>
-            <a youtube href="#"><img src="#" alt="#" /></a>
+            <a whatsapp href="#"
+              ><img src="img/whatsapp.svg" alt="whatsapp"
+            /></a>
+            <a facebook href="#"
+              ><img src="img/facebook.svg" alt="facebook"
+            /></a>
+            <a instagram href="#"
+              ><img src="img/instagram.svg" alt="instagram"
+            /></a>
+            <a telegram href="#"
+              ><img src="img/telegram.svg" alt="telegram"
+            /></a>
+            <a youtube href="#"><img src="img/youtube.svg" alt="youtube" /></a>
           </ul>
         </div>
         <div right>
-          <a phone href="#"><img src="#" alt="#" /></a>
-          <a place href="#"><img src="#" alt="#" /></a>
+          <a phone href="#"><img src="img/phone.svg" alt="phone" /></a>
+          <a location href="#"><img src="img/location.svg" alt="location" /></a>
           <select language_selector name="#" id="#">
             <option ua value="#"></option>
             <option eng value="#"></option>
@@ -44,10 +52,10 @@
           <option value="#"></option>
         </select>
         <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
+          <li><a href="#">Наші партнери</a></li>
+          <li><a href="#">Звіти</a></li>
+          <li><a href="#">Новини</a></li>
+          <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
     </header>
@@ -117,9 +125,9 @@
           </li>
         </ul>
       </div>
-      <img src="#" alt="#" />
-      <img src="#" alt="#" />
-      <img src="#" alt="#" />
+      <img src="img/goals1.jpg" alt="reason1" />
+      <img src="img/goals2.jpg" alt="reason2" />
+      <img src="img/goals3.jpg" alt="reason3" />
     </section>
     <section numbers>
       <h2 title>Асоціація «Джерело» у цифрах</h2>
@@ -139,18 +147,24 @@
         </h3>
       </div>
       <div grid>
-        <h2><span></span></h2>
-        <h2><span></span></h2>
-        <h2><span></span></h2>
-        <h2><span></span></h2>
-        <h2><span></span></h2>
-        <h2><span></span></h2>
-        <h2><span></span></h2>
-        <h2><span></span></h2>
-        <h2><span></span></h2>
+        <h2>10 років<span>активної роботи в Іспанії</span></h2>
+        <h2>70+<span>культурних подій</span></h2>
+        <h2>
+          понад 150 тонн<span>зібраної гуманітарної допомоги для України</span>
+        </h2>
+        <h2>
+          40 000€<span
+            >перераховано для допомоги Україні (ЗСУ, цивільне населення)</span
+          >
+        </h2>
+        <h2>понад 100<span>волонтерів залучили до допомоги</span></h2>
+        <h2>3 освітніх проєкти<span>заснували у Барселоні </span></h2>
+        <h2>понад 2500<span>продуктових наборів</span></h2>
+        <h2>майже 100<span>людей відвідує курси</span></h2>
+        <h2>25 осіб<span>навчаються на курсах для абітурієнтів</span></h2>
       </div>
       <div plans>
-        <img src="#" alt="#" />
+        <img src="img/video.jpg" alt="video" />
         <div right>
           <h3>
             Про наші плани на майбутнє розповідає засновниця Асоціації Ольга
@@ -163,7 +177,7 @@
             створення нових сучасних проєктів, які спрямовані на популяризацію
             та розвиток української культури та мистецтва. Звітуємо перед
             членами та меценатами, залучаємо нових партнерів, маємо великі
-            плани. За сутністю асоціація «Джерело» е організацією парасолькового
+            плани. За сутністю асоціація «Джерело» є організацією парасолькового
             типу.
           </p>
           <div buttons>
@@ -175,151 +189,250 @@
     </section>
     <section projects>
       <div grid>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+          <img src="img/generation.jpg" alt="school" />
+          <span>Українська школа та садочок “Нове покоління”</span>
+        </div>
+        <div>
+          <img src="img/square.jpg" alt="square" />
+          <span>Український сквер на горі Монжуїк</span>
+        </div>
+        <div>
+          <span>Гуманітарний Центр допомоги Україні</span>
+        </div>
+        <div>
+          <img src="img/library.jpg" alt="library" />
+          <span>Українська бібліотека у Барселоні</span>
+        </div>
+        <div>
+          <img src="img/fest.jpg" alt="festival" />
+          <span>Щорічний фестиваль української культури “Ucrania Fest”</span>
+        </div>
+        <div>
+          <span>Український Центр у Барселоні</span>
+        </div>
+        <div>
+          <img src="img/help.jpg" alt="help" />
+          <span>Веб сайт допомоги українським біженцям HelpUA.esp</span>
+        </div>
       </div>
       <div events>
-        <span ticker> </span>
+        <span ticker>Асоціація активно проводить такі заходи: </span>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <a href="#"
+              >Фестиваль «Вишиванка як код нації» (Людмила Скитенко, «Академія
+              успіху»)</a
+            >
+          </li>
+          <li>
+            Допомога учасникам (пораненим) подій на Майдані (Революція гідності)
+          </li>
+          <li>
+            Матеріальна та грошова допомога воїнам АТО та ЗСУ, пораненим у
+            війні, реабілітація в Барселоні
+          </li>
+          <li>
+            Матеріальна допомога дітям-сиротам у дитячих будинках в Україні
+          </li>
+          <li>Вечорниці</li>
+          <li>
+            <a href="#"
+              >Зустрічі з сучасними українськими письменниками та презентації їх
+              творів</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              >Фотовиставки та виставки картин українських художників</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              >Юридичні семінари за участю висококваліфікованих спеціалістів</a
+            >
+          </li>
+          <li>
+            Концерти відомих українських співаків та танцювальних колективів
+          </li>
+          <li>
+            участь у місцевих фестивалях міста Барселони (Merce, Festival)
+            «Sopas del Mundo»
+          </li>
         </ul>
       </div>
     </section>
     <section participate>
       <div left>
-        <h2></h2>
+        <h2>Члени Асоціації можуть:</h2>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>Навчати дітей у школі «Нове покоління»</li>
+          <li>Займатися на мовних курсах, користуватися бібліотекою</li>
+          <li>Відвідувати освітні заходи</li>
+          <li>Брати участь та організовувати культурні, мистецьки події</li>
+          <li>
+            Отримувати юридичні консультації та допомогу, а також консультації
+            психолога
+          </li>
         </ul>
       </div>
       <div right>
-        <p></p>
-        <strong></strong>
-        <button></button>
+        <p>
+          Щоб стати членом асоціації треба мати бажання, зв’язатись із нами,
+          пройти невеличку співбесіду, сплатити членські внески. Можна заповнити
+          форму прямо тут на сайті, ми зв’яжемось з вами. <br /><br />
+          Ласкаво просимо до нашої великої сім’ї, зараз в асоціації понад 1000
+          членів.
+        </p>
+        <strong>Членський внесок 15 євро на рік. </strong>
+        <button>Хочу бути членом Асоціації «Джерело»</button>
       </div>
     </section>
     <section partners>
       <h2></h2>
       <div grid>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>Генеральне Консульство України у Барселоні</div>
+        <div>Женералітат Каталонії</div>
+        <div>Міська рада Барселони</div>
+        <div>Фонд "Banc dels Aliments"</div>
+        <div>Банк "La Caixa"</div>
+        <div>Міжнародна освітня мережа "Planeta Formación y Universidades"</div>
+        <div>Каталонська комісія з допомоги біженцям</div>
+        <div>Юридична компанія "AhlawPartners"</div>
+        <div>
+          Європейське молодіжне інформаційне та консультаційне агентство
+        </div>
+        <div>ПЛАСТ в Іспанії</div>
+        <div>Українські асоціації в Іспанії</div>
+        <div>Iспанські громадські організації</div>
       </div>
       <div buttons>
-        <button></button>
-        <button></button>
+        <button>Стати нашим партнером</button>
+        <button>Повний перелiк партнерiв</button>
       </div>
     </section>
     <article news>
-      <h2></h2>
+      <h2>Новини</h2>
       <div right>
-        <img src="#" alt="#" />
+        <img src="img/news1.jpg" alt="news" />
         <div>
-          <h4></h4>
-          <span></span>
-          <p></p>
-          <a href="#"></a>
+          <h4>Арт-шоу «Вишиванка, як код нації»</h4>
+          <span>04.04.2022</span>
+          <p>
+            «Вишиванка, як код нації» – святкове шоу української вишиванки, яке
+            пройщло з великим розмахом
+          </p>
+          <a href="#">Детальнiше</a>
         </div>
       </div>
       <div left>
-        <img src="#" alt="#" />
+        <img src="img/news2.jpg" alt="news" />
         <div>
-          <h4></h4>
-          <span></span>
-          <p></p>
-          <a href="#"></a>
+          <h4>Благодійний концерт жертвам війни в Україні</h4>
+          <span>04.04.2022</span>
+          <p>
+            28 березня 2022 року у церкві Santa Maria del Mar відбувся
+            Благодійний концерт жертвам війни
+          </p>
+          <a href="#">Детальнiше</a>
         </div>
       </div>
-      <button></button>
+      <button>Дивитись ще</button>
     </article>
     <section team>
-      <h2></h2>
+      <h2>Наша команда</h2>
       <div>
-        <img src="#" alt="#" />
-        <h4></h4>
-        <p></p>
+        <img src="img/team1.jpg" alt="team1" />
+        <h4>Lorem ipsum</h4>
+        <p>Lorem ipsum dolor sit amet, consectet</p>
       </div>
       <div>
-        <img src="#" alt="#" />
-        <h4></h4>
-        <p></p>
+        <img src="img/team2.jpg" alt="team2" />
+        <h4>Lorem ipsum</h4>
+        <p>Lorem ipsum dolor sit amet, consectet</p>
       </div>
       <div>
-        <img src="#" alt="#" />
-        <h4></h4>
-        <p></p>
+        <img src="img/team3.jpg" alt="team3" />
+        <h4>Lorem ipsum</h4>
+        <p>Lorem ipsum dolor sit amet, consectet</p>
       </div>
       <div>
-        <img src="#" alt="#" />
-        <h4></h4>
-        <p></p>
+        <img src="img/team4.jpg" alt="team4" />
+        <h4>Lorem ipsum</h4>
+        <p>Lorem ipsum dolor sit amet, consectet</p>
       </div>
     </section>
     <section contacts>
-      <h2></h2>
+      <h2>Контакти</h2>
       <div>
-        <p></p>
+        <p>
+          Слідкуйте за сторінкою Асоціації у фейсбуці. Ми пишемо про події, які
+          були і які плануємо, анонси, інформуємо про зміни у законодавстві,
+          запрошуємо на курси, розповідаємо про цікаве.
+        </p>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <a href="#"><img src="img/facebook.svg" alt="facebook" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/instagram.svg" alt="instagram" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/telegram.svg" alt="telegram" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/youtube.svg" alt="youtube" /></a>
+          </li>
         </ul>
-        <p></p>
+        <p>
+          Нас можна знайти за адресою Carrer de Béjar, 38 автобус D40, V5, 27
+          метро L5 Sants Estació або L3 Espanya <br /><br />Ласкаво просимо!
+        </p>
         <ul>
-          <li><img src="#" alt="#" /></li>
-          <li><img src="#" alt="#" /></li>
+          <li>
+            <a href="#"
+              ><img src="img/mail.svg" alt="mail" /><span
+                >asociacion@djerelo.eu</span
+              ></a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img src="img/phone.svg" alt="phone" /><span
+                >+34 641 35 22 51</span
+              ></a
+            >
+          </li>
         </ul>
       </div>
-      <div iframe></div>
+      <div iframe maps></div>
     </section>
     <footer>
-      <div left></div>
+      <div left>
+        <a href="#"><img src="img/logo.svg" alt="logo" /></a>
+        <p>© Djerelo.eu. 2022 Усі права захищено.</p>
+      </div>
       <div right>
         <div list>
           <ul>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#">Наші партнери</a></li>
+            <li><a href="#">Звіти</a></li>
+            <li><a href="#">Новини</a></li>
+            <li><a href="#">Контакти</a></li>
+            <li><a href="#">Український центр у Барселоні </a></li>
+            <li><a href="#">Школа та садочок</a></li>
+            <li><a href="#">Гуманітарний центр</a></li>
+            <li><a href="#">Бібліотека</a></li>
+            <li><a href="#">Український сад </a></li>
+            <li><a href="#">Фестиваль</a></li>
+            <li><a href="#">Вебсайт допомоги біженцям з України</a></li>
           </ul>
         </div>
-        <div additional info></div>
+        <div additional info>
+          <span>Розробка<a href="#">Colin Drury</a></span>
+          <span>Дизайн<a href="#">Clickable agenсy</a></span>
+          <span>Маркетинг, Google Grants<a href="#">Inweb.ua</a></span>
+        </div>
       </div>
     </footer>
     <script
