--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   </head>
   <body class="container">
     <header>
-      <div class="">
-        <div left>
-          <img src="img/logo.svg" alt="logo" />
-          <ul>
+      <div class="flex justify-between items-center border-b p-3">
+        <div class="top flex gap-2">
+          <img class="" src="img/logo.svg" alt="logo" />
+          <ul class="flex items-center mb-0 gap-3 p-0">
             <li></li>
             <a whatsapp href="#"
               ><img src="img/whatsapp.svg" alt="whatsapp"
@@ -35,23 +35,28 @@
             <a youtube href="#"><img src="img/youtube.svg" alt="youtube" /></a>
           </ul>
         </div>
-        <div right>
-          <a phone href="#"><img src="img/phone.svg" alt="phone" /></a>
-          <a location href="#"><img src="img/location.svg" alt="location" /></a>
+        <div class="flex items-center gap-4">
+          <a class="flex items-center gap-2" phone href="#"
+            ><img src="img/phone.svg" alt="phone" />+34 641 35 22 51</a
+          >
+          <a class="flex items-center gap-2" location href="#"
+            ><img src="img/location.svg" alt="location" />Carrer de Béjar, 38,
+            Barcelona</a
+          >
           <select language_selector name="#" id="#">
-            <option ua value="#"></option>
-            <option eng value="#"></option>
-            <option sp value="#"></option>
+            <option ua value="#">UKR</option>
+            <option eng value="#">ENG</option>
+            <option sp value="#">ESP</option>
           </select>
         </div>
       </div>
-      <nav>
+      <nav class="flex items-center justify-center m-2">
         <select name="directions" aria-placeholder="Наші напрямки" id="#">
-          <option value="#"></option>
+          <option value="#">Наші напрямки</option>
           <option value="#"></option>
           <option value="#"></option>
         </select>
-        <ul>
+        <ul class="flex items-center gap-2 m-0">
           <li><a href="#">Наші партнери</a></li>
           <li><a href="#">Звіти</a></li>
           <li><a href="#">Новини</a></li>
@@ -59,10 +64,10 @@
         </ul>
       </nav>
     </header>
-    <section hero>
+    <section hero class="flex flex-col items-center text-center m-[110px]">
       <h1 title>
         Українська Асоціація «Джерело»
-        <span
+        <span class="d-block"
           >Розвиток та підтримка української діаспори в Каталонії, Іспанії з
           2012 року
         </span>
@@ -73,10 +78,10 @@
       </div>
     </section>
     <div slider></div>
-    <article goals>
-      <h2 title>Хто ми та що робимо</h2>
-      <div articles>
-        <div left>
+    <article goals class="flex flex-col">
+      <h2 title class="text-center">Хто ми та що робимо</h2>
+      <div articles class="flex">
+        <div class="max-w-[50%]">
           <h3>
             <span>Наша мета:</span> сформувати позитивний імідж України як
             сучасної та привабливої європейської країни.
@@ -86,7 +91,7 @@
             задля зміцнення міжнародних зв'язків України та Іспанії.
           </h3>
         </div>
-        <p>
+        <p class="max-w-[50%]">
           Ольга Дзюбан заснувала Асоціацію «Джерело» у 2012 році задля допомоги
           українцям. <br /><br />
           Українці, які опиняються в Іспанії та хочуть залишитись у цій країні,
@@ -99,8 +104,8 @@
         </p>
       </div>
     </article>
-    <section main reasons>
-      <div left>
+    <section main reasons class="flex">
+      <div left class="m-w-[50%]">
         <h2 title>Основними цілями діяльності Асоціації є:</h2>
         <ul>
           <li>
@@ -125,14 +130,16 @@
           </li>
         </ul>
       </div>
-      <img src="img/goals1.jpg" alt="reason1" />
-      <img src="img/goals2.jpg" alt="reason2" />
-      <img src="img/goals3.jpg" alt="reason3" />
+      <div class="m-w-[50%] grid">
+        <img src="img/goals1.jpg" alt="reason1" />
+        <img src="img/goals2.jpg" alt="reason2" />
+        <img src="img/goals3.jpg" alt="reason3" />
+      </div>
     </section>
     <section numbers>
-      <h2 title>Асоціація «Джерело» у цифрах</h2>
-      <div>
-        <p>
+      <h2 title class="text-center">Асоціація «Джерело» у цифрах</h2>
+      <div class="flex">
+        <p class="m-w-[50%]">
           Станом на 01.09.2022 Гуманітарним Центром Асоціації надано допомогу
           понад 1 тисячі українських сімей, які тимчасово переміщені в Іспанію
           внаслідок війни в Україні. Також Центром видано 1593 продуктових
@@ -141,12 +148,12 @@
           курсів з вивчення іспанської мови для абітурієнтів, що вступатимуть до
           іспанських вишів.
         </p>
-        <h3>
+        <h3 class="m-w-[50%]">
           Щодня послугами Гуманітарного центру Асоціації користуються
           всередньому 50 сімей
         </h3>
       </div>
-      <div grid>
+      <div grid class="grid">
         <h2>10 років<span>активної роботи в Іспанії</span></h2>
         <h2>70+<span>культурних подій</span></h2>
         <h2>
@@ -163,9 +170,11 @@
         <h2>майже 100<span>людей відвідує курси</span></h2>
         <h2>25 осіб<span>навчаються на курсах для абітурієнтів</span></h2>
       </div>
-      <div plans>
-        <img src="img/video.jpg" alt="video" />
-        <div right>
+      <div plans class="flex">
+        <div>
+          <img src="img/video.jpg" alt="video" />
+        </div>
+        <div right class="m-w-[50%]">
           <h3>
             Про наші плани на майбутнє розповідає засновниця Асоціації Ольга
             Дзюбан
